@@ -639,7 +639,7 @@ class TwitterFeed(Twitter):
 
         The actual access level determines the portion of the firehose.
         """
-        return self._rtfeed('https://stream.twitter.com/1/statuses/sample.json',
+        return self._rtfeed('https://stream.twitter.com/1.1/statuses/sample.json',
                             delegate,
                             args)
 
@@ -668,7 +668,7 @@ class TwitterFeed(Twitter):
         """
         Returns all public statuses.
         """
-        return self._rtfeed('https://stream.twitter.com/1/statuses/firehose.json',
+        return self._rtfeed('https://stream.twitter.com/1.1/statuses/firehose.json',
                             delegate,
                             args)
 
@@ -677,7 +677,7 @@ class TwitterFeed(Twitter):
         """
         Returns public statuses that match one or more filter predicates.
         """
-        return self._rtfeed('https://stream.twitter.com/1/statuses/filter.json',
+        return self._rtfeed('https://stream.twitter.com/1.1/statuses/filter.json',
                             delegate,
                             args)
 
@@ -739,7 +739,7 @@ class TwitterFeed(Twitter):
         also track certain keywords, follow additional accounts or filter by
         location.
         """
-        return self._rtfeed('https://userstream.twitter.com/2/user.json',
+        return self._rtfeed('https://userstream.twitter.com/1.1/user.json',
                             delegate,
                             args)
 
